grammar/pruebaParser.py
# Generated from prueba.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class pruebaParser ( Parser ):

    grammarFileName = "prueba.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'{'", "'}'", "'('", "','", "')'", 
                     "':'", "'@'", "'.'", "'~'", "<INVALID>", "<INVALID>", 
                     "'true'", "'false'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'self'", "'SELF_TYPE'", "<INVALID>", "'<-'", "'+'", 
                     "'-'", "'*'", "'/'", "'<'", "'<='", "'='", "'(*'", 
                     "'*)'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "CLASS", "ELSE", 
                      "TRUE", "FALSE", "FI", "IF", "IN", "INHERITS", "ISVOID", 
                      "LOOP", "POOL", "THEN", "WHILE", "NEW", "NOT", "LET", 
                      "INT", "ID", "TYPE", "SELF", "SELF_TYPE", "STR", "ASSIGNMENT", 
                      "ADD", "MINUS", "MULT", "DIV", "LT", "LE", "EQ", "START_COMMENT", 
                      "END_COMMENT", "COMMENT", "LINE_COMMENT", "WHITESPACE" ]

    RULE_start = 0
    RULE_program = 1
    RULE_classSpecification = 2
    RULE_feature = 3
    RULE_formal = 4
    RULE_declaration = 5
    RULE_expr = 6

    ruleNames =  [ "start", "program", "classSpecification", "feature", 
                   "formal", "declaration", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    CLASS=11
    ELSE=12
    TRUE=13
    FALSE=14
    FI=15
    IF=16
    IN=17
    INHERITS=18
    ISVOID=19
    LOOP=20
    POOL=21
    THEN=22
    WHILE=23
    NEW=24
    NOT=25
    LET=26
    INT=27
    ID=28
    TYPE=29
    SELF=30
    SELF_TYPE=31
    STR=32
    ASSIGNMENT=33
    ADD=34
    MINUS=35
    MULT=36
    DIV=37
    LT=38
    LE=39
    EQ=40
    START_COMMENT=41
    END_COMMENT=42
    COMMENT=43
    LINE_COMMENT=44
    WHITESPACE=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def program(self):
            return self.getTypedRuleContext(pruebaParser.ProgramContext,0)


        def getRuleIndex(self):
            return pruebaParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = pruebaParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 14
            self.program()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classSpecification(self):
            return self.getTypedRuleContext(pruebaParser.ClassSpecificationContext,0)


        def program(self):
            return self.getTypedRuleContext(pruebaParser.ProgramContext,0)


        def EOF(self):
            return self.getToken(pruebaParser.EOF, 0)

        def getRuleIndex(self):
            return pruebaParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = pruebaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program)
        try:
            self.state = 21
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [pruebaParser.CLASS]:
                self.enterOuterAlt(localctx, 1)
                self.state = 16
                self.classSpecification()
                self.state = 17
                self.match(pruebaParser.T__0)
                self.state = 18
                self.program()
                pass
            elif token in [pruebaParser.EOF]:
                self.enterOuterAlt(localctx, 2)
                self.state = 20
                self.match(pruebaParser.EOF)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassSpecificationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(pruebaParser.CLASS, 0)

        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(pruebaParser.TYPE)
            else:
                return self.getToken(pruebaParser.TYPE, i)

        def INHERITS(self):
            return self.getToken(pruebaParser.INHERITS, 0)

        def feature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pruebaParser.FeatureContext)
            else:
                return self.getTypedRuleContext(pruebaParser.FeatureContext,i)


        def getRuleIndex(self):
            return pruebaParser.RULE_classSpecification

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassSpecification" ):
                listener.enterClassSpecification(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassSpecification" ):
                listener.exitClassSpecification(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassSpecification" ):
                return visitor.visitClassSpecification(self)
            else:
                return visitor.visitChildren(self)




    def classSpecification(self):

        localctx = pruebaParser.ClassSpecificationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classSpecification)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 23
            self.match(pruebaParser.CLASS)
            self.state = 24
            self.match(pruebaParser.TYPE)
            self.state = 27
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==pruebaParser.INHERITS:
                self.state = 25
                self.match(pruebaParser.INHERITS)
                self.state = 26
                self.match(pruebaParser.TYPE)


            self.state = 29
            self.match(pruebaParser.T__1)
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==pruebaParser.ID:
                self.state = 30
                self.feature()
                self.state = 31
                self.match(pruebaParser.T__0)
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 38
            self.match(pruebaParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeatureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(pruebaParser.ID, 0)

        def TYPE(self):
            return self.getToken(pruebaParser.TYPE, 0)

        def expr(self):
            return self.getTypedRuleContext(pruebaParser.ExprContext,0)


        def formal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pruebaParser.FormalContext)
            else:
                return self.getTypedRuleContext(pruebaParser.FormalContext,i)


        def ASSIGNMENT(self):
            return self.getToken(pruebaParser.ASSIGNMENT, 0)

        def getRuleIndex(self):
            return pruebaParser.RULE_feature

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFeature" ):
                listener.enterFeature(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFeature" ):
                listener.exitFeature(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFeature" ):
                return visitor.visitFeature(self)
            else:
                return visitor.visitChildren(self)




    def feature(self):

        localctx = pruebaParser.FeatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_feature)
        self._la = 0 # Token type
        try:
            self.state = 69
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 40
                self.match(pruebaParser.ID)
                self.state = 41
                self.match(pruebaParser.T__3)
                self.state = 52
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==pruebaParser.ID:
                    self.state = 42
                    self.formal()
                    self.state = 47
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==pruebaParser.T__4:
                        self.state = 43
                        self.match(pruebaParser.T__4)
                        self.state = 44
                        self.formal()
                        self.state = 49
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 54
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 55
                self.match(pruebaParser.T__5)
                self.state = 56
                self.match(pruebaParser.T__6)
                self.state = 57
                self.match(pruebaParser.TYPE)
                self.state = 58
                self.match(pruebaParser.T__1)
                self.state = 59
                self.expr(0)
                self.state = 60
                self.match(pruebaParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 62
                self.match(pruebaParser.ID)
                self.state = 63
                self.match(pruebaParser.T__6)
                self.state = 64
                self.match(pruebaParser.TYPE)
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==pruebaParser.ASSIGNMENT:
                    self.state = 65
                    self.match(pruebaParser.ASSIGNMENT)
                    self.state = 66
                    self.expr(0)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(pruebaParser.ID, 0)

        def TYPE(self):
            return self.getToken(pruebaParser.TYPE, 0)

        def getRuleIndex(self):
            return pruebaParser.RULE_formal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormal" ):
                listener.enterFormal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormal" ):
                listener.exitFormal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormal" ):
                return visitor.visitFormal(self)
            else:
                return visitor.visitChildren(self)




    def formal(self):

        localctx = pruebaParser.FormalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_formal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(pruebaParser.ID)
            self.state = 72
            self.match(pruebaParser.T__6)
            self.state = 73
            self.match(pruebaParser.TYPE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(pruebaParser.ID, 0)

        def TYPE(self):
            return self.getToken(pruebaParser.TYPE, 0)

        def ASSIGNMENT(self):
            return self.getToken(pruebaParser.ASSIGNMENT, 0)

        def expr(self):
            return self.getTypedRuleContext(pruebaParser.ExprContext,0)


        def getRuleIndex(self):
            return pruebaParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = pruebaParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(pruebaParser.ID)
            self.state = 76
            self.match(pruebaParser.T__6)
            self.state = 77
            self.match(pruebaParser.TYPE)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==pruebaParser.ASSIGNMENT:
                self.state = 78
                self.match(pruebaParser.ASSIGNMENT)
                self.state = 79
                self.expr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pruebaParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class NewInstanciaContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pruebaParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NEW(self):
            return self.getToken(pruebaParser.NEW, 0)
        def TYPE(self):
            return self.getToken(pruebaParser.TYPE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNewInstancia" ):
                listener.enterNewInstancia(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNewInstancia" ):
                listener.exitNewInstancia(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNewInstancia" ):
                return visitor.visitNewInstancia(self)
            else:
                return visitor.visitChildren(self)


    class MenorIgualQueContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pruebaParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pruebaParser.ExprContext)
            else:
                return self.getTypedRuleContext(pruebaParser.ExprContext,i)

        def LE(self):
            return self.getToken(pruebaParser.LE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMenorIgualQue" ):
                listener.enterMenorIgualQue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMenorIgualQue" ):
                listener.exitMenorIgualQue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMenorIgualQue" ):
                return visitor.visitMenorIgualQue(self)
            else:
                return visitor.visitChildren(self)


    class IfElseContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pruebaParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(pruebaParser.IF, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pruebaParser.ExprContext)
            else:
                return self.getTypedRuleContext(pruebaParser.ExprContext,i)

        def THEN(self):
            return self.getToken(pruebaParser.THEN, 0)
        def ELSE(self):
            return self.getToken(pruebaParser.ELSE, 0)
        def FI(self):
            return self.getToken(pruebaParser.FI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfElse" ):
                listener.enterIfElse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfElse" ):
                listener.exitIfElse(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfElse" ):
                return visitor.visitIfElse(self)
            else:
                return visitor.visitChildren(self)


    class NotMenosContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pruebaParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(pruebaParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNotMenos" ):
                listener.enterNotMenos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNotMenos" ):
                listener.exitNotMenos(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNotMenos" ):
                return visitor.visitNotMenos(self)
            else:
                return visitor.visitChildren(self)


    class TrueContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pruebaParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TRUE(self):
            return self.getToken(pruebaParser.TRUE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTrue" ):
                listener.enterTrue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTrue" ):
                listener.exitTrue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTrue" ):
                return visitor.visitTrue(self)
            else:
                return visitor.visitChildren(self)


    class WhileContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pruebaParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(pruebaParser.WHILE, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pruebaParser.ExprContext)
            else:
                return self.getTypedRuleContext(pruebaParser.ExprContext,i)

        def LOOP(self):
            return self.getToken(pruebaParser.LOOP, 0)
        def POOL(self):
            return self.getToken(pruebaParser.POOL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile" ):
                listener.enterWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile" ):
                listener.exitWhile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile" ):
                return visitor.visitWhile(self)
            else:
                return visitor.visitChildren(self)


    class StringContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pruebaParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STR(self):
            return self.getToken(pruebaParser.STR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString" ):
                listener.enterString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString" ):
                listener.exitString(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString" ):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)


    class FalseContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pruebaParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FALSE(self):
            return self.getToken(pruebaParser.FALSE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFalse" ):
                listener.enterFalse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFalse" ):
                listener.exitFalse(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFalse" ):
                return visitor.visitFalse(self)
            else:
                return visitor.visitChildren(self)


    class IntegerContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pruebaParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(pruebaParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInteger" ):
                listener.enterInteger(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInteger" ):
                listener.exitInteger(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInteger" ):
                return visitor.visitInteger(self)
            else:
                return visitor.visitChildren(self)


    class MultiplicarContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pruebaParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pruebaParser.ExprContext)
            else:
                return self.getTypedRuleContext(pruebaParser.ExprContext,i)

        def MULT(self):
            return self.getToken(pruebaParser.MULT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultiplicar" ):
                listener.enterMultiplicar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultiplicar" ):
                listener.exitMultiplicar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultiplicar" ):
                return visitor.visitMultiplicar(self)
            else:
                return visitor.visitChildren(self)


    class DividirContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pruebaParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pruebaParser.ExprContext)
            else:
                return self.getTypedRuleContext(pruebaParser.ExprContext,i)

        def DIV(self):
            return self.getToken(pruebaParser.DIV, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDividir" ):
                listener.enterDividir(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDividir" ):
                listener.exitDividir(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDividir" ):
                return visitor.visitDividir(self)
            else:
                return visitor.visitChildren(self)


    class NotContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pruebaParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(pruebaParser.NOT, 0)
        def expr(self):
            return self.getTypedRuleContext(pruebaParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNot" ):
                listener.enterNot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNot" ):
                listener.exitNot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNot" ):
                return visitor.visitNot(self)
            else:
                return visitor.visitChildren(self)


    class ParenthesisContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pruebaParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(pruebaParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParenthesis" ):
                listener.enterParenthesis(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParenthesis" ):
                listener.exitParenthesis(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParenthesis" ):
                return visitor.visitParenthesis(self)
            else:
                return visitor.visitChildren(self)


    class AsignacionContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pruebaParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(pruebaParser.ID, 0)
        def ASSIGNMENT(self):
            return self.getToken(pruebaParser.ASSIGNMENT, 0)
        def expr(self):
            return self.getTypedRuleContext(pruebaParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignacion" ):
                return visitor.visitAsignacion(self)
            else:
                return visitor.visitChildren(self)


    class LlavesContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pruebaParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pruebaParser.ExprContext)
            else:
                return self.getTypedRuleContext(pruebaParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLlaves" ):
                listener.enterLlaves(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLlaves" ):
                listener.exitLlaves(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLlaves" ):
                return visitor.visitLlaves(self)
            else:
                return visitor.visitChildren(self)


    class IdentifierContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pruebaParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(pruebaParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifier" ):
                listener.enterIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifier" ):
                listener.exitIdentifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier" ):
                return visitor.visitIdentifier(self)
            else:
                return visitor.visitChildren(self)


    class SumarContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pruebaParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pruebaParser.ExprContext)
            else:
                return self.getTypedRuleContext(pruebaParser.ExprContext,i)

        def ADD(self):
            return self.getToken(pruebaParser.ADD, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSumar" ):
                listener.enterSumar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSumar" ):
                listener.exitSumar(self)
